<resources>
    <string name="app_name">MobileShop</string>
    <string name="logo_brand_desc">LogoBrand</string>
    <string name="logo_main_desc">logo main</string>
    <string name="login_image_pastry_desc">login image pastry</string>
    <string name="login_to_app">ورود به برنامه</string>
    <string name="mobile_shop">موبایل شاپ</string>
    <string name="_09">09*********</string>
    <string name="send_code">ارسال کد تایید</string>
    <string name="not_internet">لطفا گوشی خود را به اینترنت متصل کنید</string>
    <string name="error">خطا</string>
    <string name="settings">تنظیمات</string>
    <string name="retry">تلاش مجدد</string>
    <string name="code_login">کد تایید</string>
    <string name="confirm_code">تایید کد و ادامه</string>
    <string name="edit_phone">ویرایش شماره</string>
    <string name="resend_code">ارسال مجدد</string>
    <string name="enter_code_sample">_ _ _ _ _</string>
    <string name="shopping_desc">shopping</string>
    <string name="alert_icon_desc">alert_icon</string>
    <string name="menu">menu</string>
    <string name="arrow_desc">arrow</string>
    <string name="close_desc">close</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="upgrade">بروز رسانی نرم افزار</string>
    <string name="contact_us">ارتباط با ما</string>
    <string name="about_us">درباره ما</string>
    <string name="support">پشتیبانی</string>
    <string name="my_orders">سفارشات من</string>
    <string name="image_desc">image</string>
    <string name="orders_desc">orders</string>
    <string name="support_desc">support</string>
    <string name="about_desc">about</string>
    <string name="contact_desc">contact</string>
    <string name="update_desc">update</string>
    <string name="logout_desc">logout</string>
    <string name="image_home_desc">image_home</string>
    <string name="image_shop_desc">image_shop</string>
    <string name="image_mobile_desc">image_mobile</string>
    <string name="image_profile_desc">image_profile</string>
    <string name="image_shopping_desc">image_shopping</string>
    <string name="date">تاریخ تولد :</string>
    <string name="hide">نامشخص</string>
    <string name="women">زن</string>
    <string name="men">مرد</string>
    <string name="sex">جنسیت :</string>
    <string name="save_info">ثبت اطلاعات</string>
    <string name="state_orders">وضعیت سفارشات</string>
    <string name="img_order_desc">img_orders</string>
    <string name="about_me">"سوپراپلیکشن موبایل شاپ باهدف ارائه برند های مختلف گوشی همراه جهت دسترسی هرچه بهتر کاربران عزیز و آشنایی با سخت افزار مدل های مختلف گوشی در زمستان سال 1403 راه اندازی شد، کاربران گرامی می توانند با جست و جوی برند مورد نظر گوشی موبایل بنا بر سلیقه خود گوشی موبایل مناسب را از این فروشگاه تهیه کنند. "</string>
    <string name="receiver">گیرنده :</string>
    <string name="phone_number">شماره تماس :</string>
    <string name="address">آدرس :</string>
    <string name="add_address">افزودن آدرس جدید</string>
    <string name="f_logo_desc">f_logo</string>
    <string name="add_new_address">ثبت آدرس</string>
    <string name="delete_question">آیا مایل به حذف این آدرس هستید؟</string>
    <string name="delete">حذف</string>
    <string name="canceling">انصراف</string>
    <string name="deleting">حذف کن</string>
    <string name="comment_desc">comment</string>
    <string name="share_desc">share</string>
    <string name="favorite_desc">imgFavorite</string>
    <string name="star_desc">star</string>
    <string name="specifications">مشخصات</string>
    <string name="general_description">توضیحات کلی</string>
    <string name="lorem">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها</string>
    <string name="send_comment">ثبت نظر</string>
    <string name="comment_hint">نظر خود را وارد کنید...</string>
    <string name="users_comment">نظرات کاربران</string>
    <string name="toman">تومان</string>
    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="img_rate_desc">img_rate</string>
    <string name="sell_normal">سفارش عادی</string>
    <string name="sell_big">سفارش عمده</string>
    <string name="count">تعداد :</string>
    <string name="min">-</string>
    <string name="one_number">1</string>
    <string name="plus">+</string>
    <string name="price_base">قیمت :</string>
    <string name="sell">تومان</string>
    <string name="off">تخفیف</string>
    <string name="percent">(درصد) :</string>
    <string name="price_total">مبلغ نهایی :</string>
    <string name="continue_sell">ادامه فرآیند ثبت سفارش</string>
    <string name="slider_desc">slider</string>
    <string name="main_image_desc">main_image</string>
    <string name="off_desc">off</string>
    <string name="search_desc">search_desc</string>
    <string name="favorite">علاقه مندی ها</string>
    <string name="not_favorite">محصولی وجود ندارد</string>
    <string name="all">بیشتر</string>
    <string name="category_desc">category</string>
    <string name="banner_desc">banner</string>
</resources>