<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layoutDirection="ltr"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view8"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@drawable/back_top_view_bottom_nav"
        app:layout_constraintBottom_toTopOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7" />

    <View
        android:id="@+id/homes"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:background="@drawable/back_item_bottom_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mobile" />

    <View
        android:id="@+id/mobile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/homes"
        app:layout_constraintEnd_toStartOf="@+id/homes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/homes" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/mobile"
        app:layout_constraintEnd_toStartOf="@+id/mobile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/product"
        app:layout_constraintTop_toTopOf="@+id/mobile" />

    <View
        android:id="@+id/product"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/profile"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <View
        android:id="@+id/profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/product"
        app:layout_constraintEnd_toStartOf="@+id/product"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/product" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/image_home_desc"
        app:layout_constraintBottom_toBottomOf="@+id/homes"
        app:layout_constraintEnd_toEndOf="@+id/homes"
        app:layout_constraintStart_toStartOf="@+id/homes"
        app:layout_constraintTop_toTopOf="@+id/homes"
        app:srcCompat="@drawable/ic_home" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/image_shop_desc"
        app:layout_constraintBottom_toBottomOf="@+id/mobile"
        app:layout_constraintEnd_toEndOf="@+id/mobile"
        app:layout_constraintStart_toStartOf="@+id/mobile"
        app:layout_constraintTop_toTopOf="@+id/mobile"
        app:srcCompat="@drawable/ic_shop" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/image_mobile_desc"
        app:layout_constraintBottom_toBottomOf="@+id/product"
        app:layout_constraintEnd_toEndOf="@+id/product"
        app:layout_constraintStart_toStartOf="@+id/product"
        app:layout_constraintTop_toTopOf="@+id/product"
        app:srcCompat="@drawable/ic_phone" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/image_profile_desc"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintStart_toStartOf="@+id/profile"
        app:layout_constraintTop_toTopOf="@+id/profile"
        app:srcCompat="@drawable/ic_user" />

    <ImageView
        android:id="@+id/shoppingCart"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:contentDescription="@string/image_shopping_desc"
        android:layout_marginEnd="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/mobile"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/ic_polygon" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/image_shopping_desc"
        app:layout_constraintBottom_toBottomOf="@+id/shoppingCart"
        app:layout_constraintEnd_toEndOf="@+id/shoppingCart"
        app:layout_constraintStart_toStartOf="@+id/shoppingCart"
        app:layout_constraintTop_toTopOf="@+id/shoppingCart"
        app:srcCompat="@drawable/ic_shopping_cart" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/off"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="view6,txtShoppingCount" />

    <View
        android:id="@+id/view6"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/back_circle_shopping_cart"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <TextView
        android:id="@+id/txtShoppingCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="55"
        android:textSize="11sp"
        android:textColor="@color/white_main"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/view6" />

</androidx.constraintlayout.widget.ConstraintLayout>